# tiago_gesture_memory_scenario

./: CMakeLists.txt  README.md  package.xml
docs/: index.html
gesture_letter_recognition/: CMakeLists.txt  package.xml
gesture_letter_recognition/models/: keras_model_summary.txt  pytorch_weights.pth
gesture_letter_recognition/scripts/: cnn.py  convert_keras_to_pytorch.py  keras_letter_classifier_node.py  letter_classifier_node.py  letter_drawer.py
tiago_gesture_memory/: CMakeLists.txt  package.xml
tiago_gesture_memory_scenario/: package.xml
