<?xml version="1.0"?>
<package format="2">
  <name>tiago_gesture_memory_scenario</name>
  <version>0.0.0</version>
  <description>Metapackage for the gesture-based memory game with TIAGo robot.</description>
  
  <maintainer email="luca6.pozzi@mail.polimi.it">Luca</maintainer>
  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>

  <exec_depend>tiago_gesture_memory</exec_depend>
  <exec_depend>gesture_memory_cnn</exec_depend>

   <export>
    <metapackage />
  </export>
</package>
